objects/ccrz__E_CartItem__c.object
<CustomObject>
    <description>Cart Items</description>
    <fields>
        <fullName>ccrz__AbsoluteDiscount__c</fullName>
        <description>The absolute discount for this item in the cart</description>
        <label>Absolute Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Additional Adjustment from the CSR</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>The availability message copied from the product inventory record when this item was added to the cart.</description>
        <label>Availability Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CartItemGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order Item Group that the item belongs to. Used for Line Level Independence.</description>
        <label>Cart Item Group</label>
        <referenceTo>ccrz__E_CartItemGroup__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CartItemId__c</fullName>
        <description>External id that can be used for data loads.</description>
        <externalId>true</externalId>
        <label>Cart Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Cart__c</fullName>
        <description>Reference to the parent cart.</description>
        <label>Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>User entered comments on the line item.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a Coupon applied to this line item.</description>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItem2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to display the name in the cart and link to product detail page</description>
        <label>Display Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Cart Items (Display Product)</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtName__c</fullName>
        <description>Defines a display Name to be used instead of the referenced Product Name for display in the cart/order.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtSKU__c</fullName>
        <description>Defines a display SKU to be used instead of the referenced Product SKU for display in the cart/order.</description>
        <externalId>true</externalId>
        <label>External SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>Is Subscription Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemLabel__c</fullName>
        <description>NOT USED</description>
        <label>Item Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemStatus__c</fullName>
        <description>Cart item status driven by inventory rules.  With inventory enabled if there is insufficient inventory then the item will be marked Pre-Order.  Otherwise it will be Available.</description>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Pre-Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ItemTotal__c</fullName>
        <formula>ccrz__AdjustmentAmount__c  +  ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalItemPrice__c</fullName>
        <description>The original price of the item before any modifiers are applied</description>
        <label>Original Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalQuantity__c</fullName>
        <description>Stores the original child quantity per unit for Kits, Bundles, and Dynamic Kits.</description>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentCartItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For minor line items this is the reference to the parent Major line item.</description>
        <label>Parent Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT USED</description>
        <label>Parent Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Cart Items (ParentProductID)</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PercentDiscount__c</fullName>
        <description>The percentage discount for this item in the cart</description>
        <label>Percent Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>The unit price of the line.</description>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__PricingModifierTypes__c</fullName>
        <description>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Cart Item</description>
        <inlineHelpText>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Cart Item</inlineHelpText>
        <label>Pricing Modifier Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PricingType__c</fullName>
        <defaultValue>&quot;auto&quot;</defaultValue>
        <description>Defines how B2B Commerce internally handles the pricing for this cart/order item. If &apos;external&apos; then B2B Commerce pricing will not apply to the cart item (see further documentation for exact rules).</description>
        <label>Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PrimaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary CC Attribute selected for the related product</description>
        <label>Primary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>ccCartItemsPrim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductType__c</fullName>
        <description>ProductType same as CartItemType</description>
        <label>ProductType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product for this line item.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Cart Items (ProductID)</relationshipLabel>
        <relationshipName>E_CartItem2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of the line item.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
        <description>Sub total for the recurring price</description>
        <label>Recurring Price Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <description>The recurring price portion of a subscription</description>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>Requested date for the line item.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__SecondaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary attribute selected for the cart item&apos;s related cc product</description>
        <label>Secondary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Cart Items (Secondary Attribute)</relationshipLabel>
        <relationshipName>ccCartItemsSec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SelectedAttr__c</fullName>
        <description>Attributes Selected for the Cart Item&apos;s Related Product. Data is in JSON Form.</description>
        <label>Selected Attributes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller this Cart Item is to be purchased from.</description>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SortName__c</fullName>
        <inlineHelpText>The localized product name for sorting the item when Cart Scale is enabled.</inlineHelpText>
        <label>Sort Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SortPrice__c</fullName>
        <description>The reference price for sorting the item when Cart Scale is enabled. For a standard product, this value is its unit price. For a complex product, this value is calculated from the total quantity and unit price of each child cart item.</description>
        <label>Sort Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__StoreID__c</fullName>
        <description>The storefront to which this line and cart belong.</description>
        <label>Store ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAmount__c</fullName>
        <description>Sub Amount total for the line.  Typically will be Price times Quantity.</description>
        <label>Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the specific subscription selected.</description>
        <label>SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Duration__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>Duration of the subscription in months.  If this is field is blank, then this cart item is not a subscribed item.</inlineHelpText>
        <label>Subscription Duration (In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Frequency__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>The frequency of this subscription in days.  If not selected via the UI, then this value defaults to the Product&apos;s subscription frequency.</inlineHelpText>
        <label>Subscription Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__TertiaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tertiary Attribute selected for the Cart Item&apos;s Related Product</description>
        <label>Tertiary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Cart Items (Tertiary Attribute)</relationshipLabel>
        <relationshipName>ccCartItemsTert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Unit of measure as copied from the product data.</description>
        <label>Unit Of Measure</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__cartItemType__c</fullName>
        <description>Defines the type of the line item.  Either Major (main line item), Minor (child line item), or Coupon.</description>
        <label>cart item type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                    <default>true</default>
                    <label>Major</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Cart Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CartItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>